fixed mis-spell in debian/control

--- a/debian/control
+++ b/debian/control
@@ -12,7 +12,7 @@ Depends: gnome-screensaver, mplayer
 Description: Daum Search Screensaver
  Girl's Generation(소녀시대) is a nine-member South Korean girl group.
  They are often referred to as SoShi (소시), or SNSD (mainly outside Korea).
- This is screensaver consist of 10 lovely movie clips.
+ This screensaver is consist of 10 lovely movie clips.
  9 for each members and 1 for 9-in-1.
  Daum made this screensaver for their search engine promotion.
  This is a customer providen package for Linux.
